# pymol-open-source

./: CMakeLists.txt  INSTALL  setup.py
.github/workflows/: build.yml
